dev - extension loading with no errors  first time :) Now it's time to apply popup.html as universal UI

--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,9 @@
   </head>
   <body>
     <h4>Open Side Panel</h4>
+    <div id="summary"></div>
+    <div id="rephrase"></div>
+    <div id="email-summary"></div>
     <button id="open-sidepanel">Open</button>
     <script src="popup.js"></script>
   </body>
