dev - first version that passing selected_text though whole system and displays on page :) :) !!!!

--- a/popup.html
+++ b/popup.html
@@ -1,24 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <style>
-      body {
-        width: 200px;
-        height: 100px;
-        padding: 10px;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-      button {
-        cursor: pointer;
-      }
-    </style>
+    <title>Your Extension Name</title>
+    <!-- other potential tags related to meta, link, style, etc. -->
+    <script src="StorageService.js"></script>
+    <script src="Popup.js"></script>
   </head>
   <body>
-    <h4>Open Side Panel</h4>
     <div id="summary"></div>
     <div id="rephrase"></div>
     <div id="email-summary"></div>
-    <button id="open-sidepanel">Open</button>
-    <script src="popup.js"></script>
-  </body>
+  </html>
 </html>
